overflow fix

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  overflow: hidden;
 
   @media only screen and (max-width: 500px) {
     width: 80%;
