--- a/src/components/item/item.scss
+++ b/src/components/item/item.scss
@@ -44,6 +44,7 @@
 
 .item-m {
   margin-right: 4px;
+  overflow: hidden;
 }
 
 .item-overwrite {
